# Financial-Symbols

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
benches/: decimal.rs  my_benchmark.rs
src/: lib.rs
test_data/: option_roots.txt  tickers.txt
