[package]
name = "financial_symbols"
version = "0.1.0"
edition = "2021"
authors = ["Dario <dario.heinisch@gmail.com>"]
description = "Stock symbols & option contracts structs which implement the Copy trait"
license = "MIT"
documentation = "https://docs.rs/financial_symbols/latest/financial_symbols/"
exclude = ["/ci", "images/", ".*", "/test_data"]
keywords = ["options", "symbol", "stock"]
categories = ["finance", "encoding", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
rust_decimal = "1.33.1"

[dependencies.serde]
version = "1"
optional = true

[dependencies.postgres-types]
version = "0.2.6"
optional = true

[features]
serde = ["dep:serde"]
postgres = ["dep:postgres-types"]
